--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -31,6 +31,10 @@
 
   </div>
 
+  <div class="field">
+  	<%= f.label :user_id %><br>
+  	<%= f.text_field :user_id %>
+  </div>
 
   <div class="field">
  	 <%= f.label :item_price_in_cents %><br>
