--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user,
+<%= form_for(@expense,
   html: { class: 'form-horizontal' },
   wrapper_mappings: {
     check_boxes: :horizontal_radio_and_checkboxes,
@@ -10,27 +10,31 @@
 ) do |f| %>
 
   <div class="field">
-	  <%= f.label :username %><br>
- 	 <%= f.text_field :username%>
+	  <%= f.label :expense_amount%><br>
+ 	 <%= f.text_field :expense_amount%>
+  </div>
+
+<% if 1 > 2 %>
+  <div class="field">
+ 	 <%= f.label :expense_reason%><br>
+ 	 <%= f.text_field :expense_reason%>
+  </div>
+<% end  %>
+
+
+  <div class="field">
+  	<%= f.label :expense_property_id%><br>
+  	<%= f.text_field :expense_property_id%>
   </div>
 
   <div class="field">
- 	 <%= f.label :user_password %><br>
- 	 <%= f.text_field :user_password%>
+    <%= f.label :user_id%><br>
+    <%= f.text_field :user_id%>
   </div>
   
-  <div class="field">
- 	 <%= f.label :email_address %><br>
- 	 <%= f.text_field :email_address %>
-  </div>
-
-  <div class="field">
- 	 <%= f.label :user_phone_number%><br>
- 	 <%= f.text_field :user_phone_number%>
-  </div>
-
   <div class="actions">
   	<%= f.submit %>
   </div>
+
 
 <% end %>
