--- a/app/views/managers/_form.html.erb
+++ b/app/views/managers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user,
+<%= form_for(@manager,
   html: { class: 'form-horizontal' },
   wrapper_mappings: {
     check_boxes: :horizontal_radio_and_checkboxes,
@@ -10,27 +10,18 @@
 ) do |f| %>
 
   <div class="field">
-	  <%= f.label :username %><br>
- 	 <%= f.text_field :username%>
+	  <%= f.label :manager_user_id%><br>
+ 	 <%= f.text_field :manager_user_id%>
   </div>
 
   <div class="field">
- 	 <%= f.label :user_password %><br>
- 	 <%= f.text_field :user_password%>
+ 	 <%= f.label :manager_code%><br>
+ 	 <%= f.text_field :manager_code%>
   </div>
   
-  <div class="field">
- 	 <%= f.label :email_address %><br>
- 	 <%= f.text_field :email_address %>
-  </div>
-
-  <div class="field">
- 	 <%= f.label :user_phone_number%><br>
- 	 <%= f.text_field :user_phone_number%>
-  </div>
-
   <div class="actions">
   	<%= f.submit %>
   </div>
+
 
 <% end %>
