--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user,
+<%= form_for(@picture,
   html: { class: 'form-horizontal' },
   wrapper_mappings: {
     check_boxes: :horizontal_radio_and_checkboxes,
@@ -10,27 +10,20 @@
 ) do |f| %>
 
   <div class="field">
-	  <%= f.label :username %><br>
- 	 <%= f.text_field :username%>
+	  <%= f.label :picture_is_before_photo%><br>
+ 	 <%= f.text_field :picture_is_before_photo%>
   </div>
 
+<% if 1 > 2 %>
   <div class="field">
- 	 <%= f.label :user_password %><br>
- 	 <%= f.text_field :user_password%>
+ 	 <%= f.label :picture_image%><br>
+ 	 <%= f.text_field :picture_image%>
   </div>
+<% end  %>
   
-  <div class="field">
- 	 <%= f.label :email_address %><br>
- 	 <%= f.text_field :email_address %>
-  </div>
-
-  <div class="field">
- 	 <%= f.label :user_phone_number%><br>
- 	 <%= f.text_field :user_phone_number%>
-  </div>
-
   <div class="actions">
   	<%= f.submit %>
   </div>
+
 
 <% end %>
