--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user,
+<%= form_for(@rental,
   html: { class: 'form-horizontal' },
   wrapper_mappings: {
     check_boxes: :horizontal_radio_and_checkboxes,
@@ -10,27 +10,35 @@
 ) do |f| %>
 
   <div class="field">
-	  <%= f.label :username %><br>
- 	 <%= f.text_field :username%>
+	  <%= f.label :rental_address%><br>
+ 	 <%= f.text_field :rental_address%>
+  </div>
+
+<% if 1 > 2 %>
+  <div class="field">
+ 	 <%= f.label :rental_tenant_id%><br>
+ 	 <%= f.text_field :rental_tenant_id%>
+  </div>
+<% end  %>
+
+  <div class="field">
+  	<%= f.label :manager_id%><br>
+  	<%= f.text_field :manager_id%>
   </div>
 
   <div class="field">
- 	 <%= f.label :user_password %><br>
- 	 <%= f.text_field :user_password%>
-  </div>
-  
-  <div class="field">
- 	 <%= f.label :email_address %><br>
- 	 <%= f.text_field :email_address %>
+ 	 <%= f.label :rental_rent%><br>
+ 	 <%= f.text_field :rental_rent%>
   </div>
 
   <div class="field">
- 	 <%= f.label :user_phone_number%><br>
- 	 <%= f.text_field :user_phone_number%>
+ 	 <%= f.label :rental_contract_id%><br>
+ 	 <%= f.text_field :rental_contract_id%>
   </div>
 
   <div class="actions">
   	<%= f.submit %>
   </div>
+
 
 <% end %>
