--- a/app/views/tenants/_form.html.erb
+++ b/app/views/tenants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment,
+<%= form_for(@tenant,
   html: { class: 'form-horizontal' },
   wrapper_mappings: {
     check_boxes: :horizontal_radio_and_checkboxes,
@@ -10,17 +10,18 @@
 ) do |f| %>
 
   <div class="field">
-	  <%= f.label :comment_text %><br>
- 	 <%= f.text_field :comment_text%>
+	  <%= f.label :tenant_user_id%><br>
+ 	 <%= f.text_field :tenant_user_id%>
   </div>
 
   <div class="field">
- 	 <%= f.label :item_id %><br>
- 	 <%= f.text_field :item_id%>
+ 	 <%= f.label :tenant_rental_id%><br>
+ 	 <%= f.text_field :tenant_rental_id%>
   </div>
-
+  
   <div class="actions">
   	<%= f.submit %>
   </div>
+
 
 <% end %>
