--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,6 +21,10 @@ This is a list of all users
     <th>Username</th>
     <th>Password</th>
     <th>Email Address</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Address</th>
+    <th>Phone Number</th>
     <th>Number of Items</th>
     <th>Items</th>
   </thead>
@@ -30,8 +34,10 @@ This is a list of all users
 	    <td> <%= user.username %> </td>
 	    <td> <%= user.user_password %> </td>
 	    <td> <%= user.email_address %> </td>
-            <td> <%= user.items.size %> </td>
-	    <td> <%= render 'user_items', user: user %></td>
+        <td> <%= user.user_first_name %> </td>
+        <td> <%= user.user_last_name %> </td>
+        <td> <%= user.user_address%> </td>
+        <td> <%= user.user_phone_number%> </td>
 	<td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_user_path(user), :class => 'btn btn-default btn-xs' %>
